fix(mantine, code editor): scrollbar z-index (#3675)

--- a/packages/mantine/src/components/code-editor/CodeEditor.module.css
+++ b/packages/mantine/src/components/code-editor/CodeEditor.module.css
@@ -1,14 +1,16 @@
 .editor {
     border: 1px solid var(--mantine-color-gray-3);
     border-radius: var(--mantine-radius-default);
+    z-index: 1;
+    height: 100%;
+    outline-width: thin;
+
     @mixin light {
         background-color: var(--mantine-color-white);
     }
     @mixin dark {
         background-color: var(--mantine-color-black);
     }
-    height: 100%;
-    outline-width: thin;
 }
 
 .valid {
